# nebius-llm-architecture-module-2

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: course_schedule.md
notebooks/hometasks/hometask_4-1_LoRA/: README.md  homework_lora.ipynb  homework_lora_Alex_Colab_20260516.ipynb
notebooks/hometasks/hometask_4-2_Build_MoE_Transformer/: 4_2_tiny_moe_lm_hometask_Alex_20260517.ipynb  4_2_tiny_moe_lm_hometask_Alex_20260517_ColabT4run.ipynb  IMPLEMENTATION_PLAN.md  RESULTS.md
notebooks/week05_06_transformers/hometask/: README.md  tiny_transformer_lm.ipynb  tiny_transformer_lm_Alex_20260504_ver1.ipynb  week5-6_tiny_transformer_task1_multihead_attention.md
notebooks/week05_06_transformers/practice/: efficient_fine_tuning.ipynb  huggingface_boilerplate.py  week_9_practice.ipynb
src/ml_course_practice/: __init__.py
