[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-course-practice"
version = "0.1.0"
description = "Practice tasks for AI Performance Engineering course"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy==2.1.3",
  "pandas==2.2.3",
  "scikit-learn==1.5.2",
  "matplotlib==3.9.2",
  "jupyterlab==4.3.0",
  "requests==2.32.3",
  "torch==2.5.1",
  "transformers==4.46.2",
  "datasets==2.15.0",
  "peft==0.13.2",
  "einops==0.8.0",
  "tqdm==4.67.1",
  "gdown==5.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "ruff==0.7.2",
  "ipykernel==6.29.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]
